refactor(StudentForm): split into StudentForm.tsx and StudentForm.module.css; add loading spinner

--- a/src/components/StudentCard/StudentCard.module.css
+++ b/src/components/StudentCard/StudentCard.module.css
@@ -29,3 +29,11 @@
 .flexEnd {
     @apply flex justify-end;
 }
+
+.spinner-container {
+    @apply fixed top-0 left-1/2 transform -translate-x-1/2 mt-4 bg-gray-600 text-white p-4 rounded shadow-lg flex items-center;
+}
+
+.spinner {
+    @apply animate-spin h-5 w-5 mr-3;
+}
